web/cobrands/eastsussex/base.scss
@import "../sass/h5bp";
@import "./_colours";
@import "../sass/mixins";
@import "compass";

$heading-font: Arial, "Helvetica Neue", Helvetica, sans-serif !default;

@import "../sass/base";

body {
    font-size: 13px;
}

footer {
    background: #00a1de;
}

.content {
    padding: 0 1em;
}

a, a:visited {
    color: #369;
    &:hover, &:active {
        color: #369;
    }
}

.issue-list-a {
  li {
      color:#666;
      a {
          color:#666;
      }
  }
}

h1.main {
    color: $primary;
    text-align: center;
    margin: 0.5em 0;
}

.container {
    padding: 0 1em 1em; /* if remove this 1em, need to edit .full-width! */
}

#site-header {
    position: relative;
    background: $primary;
    height: 76px;
    border-top-width: 4px;
    margin-top: -4px;
}
#site-header .eastsussex .header {
    margin: 0 0 2px;
}
.frontpage #site-header .eastsussex .header {
    margin: 0 0 9px;
}

.mappage .application-nav, .twothirdswidthpage .application-nav {
    padding: 4.5px 9px;
}

// Colour tab to match colour scheme
#nav-link {
  width: 50px;
  height: 48px;
}

#report-cta {
  top: 24px; // height of header
  margin-top: -0.7em;
  font-size: 1em;
  border-color: mix(#fff, $primary, 20%);

  &:hover, &:focus {
    background-color: mix(#fff, $primary, 10%);
  }
}

#breadcrumb_breadcrumbTrail ol li {
    list-style: none;
}

#problems-nav {
    border-bottom:0.25em solid $primary;
    ul li a {
        text-transform: none;
        color: #666;
        &.active {
            background: $primary;
            color: #fff;
        }
    }
}

#report-a-problem-sidebar .sidebar-notes a {
    color: #fff;
    text-decoration: underline;
}

.big-green-banner {
    text-transform: none;
    z-index: 5000;
}

.green-btn, input.green-btn, input.green-btn:hover {
    background: #44697d;
    border: lighten(#44697d, 10%);
    font-weight: bold;
    font-size: 1.1em;
}

#form_sign_in {
    margin-top: 1em;
}

#front-main {

    margin: 0;
    padding: 1em;

    #front-main-container {
        text-align: center;
    }

    #postcodeForm {
        padding: 1em;

        label {
            text-align: center;
        }

        div {
            padding-top: 0px;
            input#pc {
            }
            input#sub {
                height: 100%;
            }
        }
    }
}

.frontpage #mysociety #front-main-container {
    h1, h2 {
        text-align: center;
    }
}


body > p {
    margin: 0;
}

.main-menu ul {
    padding: 0;
    margin: 6px;
    text-align: center;

    li {
        display: inline-block;
        list-style: none;

        a, span {
            padding: 2px 6px;
            margin: 3px;
            border-radius: 3px;
        }

        a, a:hover {
            background-color: #00a1de;
            color: white;
        }

        span {
            background-color: #00a1de;
            color: white;
        }
    }
}

footer {
    display: none;
}

.footer .languages ul {

    li {
        display: inline-block;
        float: none !important;
    }
}

button, input[type=submit], .btn {
    text-transform: none;
}

/* as per email from Matt Tooke, we are using ESCC's .button-nav
styling, but this doesn't dtrt with span, so adding ourselves */

.button-nav span {
    float: left;
    display: block;
    margin: 5px 2px 5px 0;
    padding: 4px 10px;
    background: #00a1de;
    color: #fff;
    font-weight: bold;
    text-decoration: none;
    white-space: nowrap;
    border-radius: 3px;
    border: 0;
}

.email {
    background-image: none;
}

::-webkit-input-placeholder {
  font-style: normal;
}
:-moz-placeholder {
    font-style: normal;
}
:-ms-placeholder {
    font-style: normal;
}
.placeholder {
    font-style: normal;
}


#geolocate_link {
    font-size: 1.0em;
}

.ie6, .ie7 {
    body {
        z-index: 1;
    }
    #site-header {
        z-index: 1;
    }
}

.label-warning {
    background: lighten(#ff3300, 20%);
    color: white;
    font-size: 90%;
    padding: 2px;
    cursor: default;
}

